20221025 Office apply .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
+data_analysis/**/DataSets/
 data_analysis/"(이정구) 데이터분석 심화"/DataSets/
 data_analysis/"(권철민) 파이썬 머신러닝 완벽 가이드(인프런)"/DataSets/
+data_analysis/"(권철민) 파이썬 머신러닝 완벽 가이드(인프런)"/DataSets/UCI/
+C:\Users\USER\Quick_Ref\data_analysis\"(권철민) 파이썬 머신러닝 완벽 가이드(인프런)"\DataSets\UCI\
 
 C:\Users\User\Quick_Ref\data_analysis\"(이정구) 데이터분석 심화"\DataSets\
 C:\Users\User\Quick_Ref\data_analysis\"(권철민) 파이썬 머신러닝 완벽 가이드(인프런)"\DataSets\
