--- a/Programming/SpringBoot/SpringWorkspace/sbb/build.gradle
+++ b/Programming/SpringBoot/SpringWorkspace/sbb/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.mysite'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.4'
 sourceCompatibility = '17'
 
 repositories {
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
+    runtimeOnly 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
