--- a/Programming/SpringBoot/office_sbb/sbb/src/main/resources/application.properties
+++ b/Programming/SpringBoot/office_sbb/sbb/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# DATABASE
+# DATABASE - h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:~/local
@@ -6,6 +6,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+spring.h2.console.settings.web-allow-others= true
 
 # JPA
 # ---
